grammar.js
    source_file: $ => repeat(choice(
      $.import_statement,
      $.declaration,
      $.statement,
    )),

    // Comments
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Numbers
    number_literal: $ => choice(
      // Decimal with optional fractional part
      /\d+(\.\d+)?/,
      // Hexadecimal
      /0x[0-9a-fA-F]+/,
      // Binary
      /0b[01]+/,
    ),

    // Strings
    string_literal: $ => token(seq(
      optional(/[lL]/),  // Optional l or L prefix for LString
      '"',
      repeat(choice(
        /[^"\\]+/,
        /\\./,
      )),
      '"',
    )),

    // Character literals
    char_literal: $ => seq(
      "'",
      choice(
        /[^'\\]/,
        /\\./,
      ),
      "'",
    ),

    // Boolean literals
    boolean_literal: $ => choice('true', 'false'),

    // Types
    declaration: $ => choice(
      $.function_declaration,
      $.asm_function,
      $.mir_function,
      $.variable_declaration,
      $.constant_declaration,
      $.type_alias,
      $.struct_declaration,
      $.enum_declaration,
      $.interface_declaration,
      $.impl_block,
      $.attributed_declaration,
      $.lua_block,
      $.compile_time_if_declaration,
      $.minz_metafunction_declaration,
      $.minz_block,
      $.mir_block_declaration,
      $.define_template,
      $.meta_execution_block,
    ),

    variable_declaration: $ => seq(
      optional($.visibility),
      choice('let', 'var', 'global'),  // 'global' as developer-friendly synonym
      optional('mut'),
      $.identifier,
      optional(seq(':', $.type)),
      optional(seq('=', $.expression)),
      ';',
    ),

    statement: $ => choice(
      $.expression_statement,
      $.return_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.loop_statement,
      $.break_statement,
      $.continue_statement,
      $.block_statement,
      $.variable_declaration,
      $.constant_declaration,  // Allow const declarations in functions
      $.function_declaration,  // Allow nested functions!
      $.defer_statement,
      $.case_statement,
      $.asm_block,
      $.compile_time_asm,
      $.mir_block,
      $.minz_block,
      $.target_block,
    ),

    expression: $ => choice(
      $.case_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
    ),
    
    postfix_expression: $ => choice(
      $.call_expression,
      $.index_expression,
      $.field_expression,
      $.try_expression,
      $.cast_expression,
      $.primary_expression,
    ),

    primary_expression: $ => choice(
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
      $.array_literal,
      $.array_initializer,
      $.struct_literal,
      $.tuple_literal,
      $.parenthesized_expression,
      $.block,
      $.inline_assembly,
      $.sizeof_expression,
      $.alignof_expression,
      $.metaprogramming_expression,
      $.error_literal,
      $.lambda_expression,
      $.if_expression,
      $.ternary_expression,
      $.when_expression,
    ),
